Fix overflow box-sizing and outline on elements

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
 
+html{
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -20,4 +24,9 @@ code {
 *{
   font-family: 'Roboto Mono', monospace;
   color: white;
+  box-sizing: border-box;
+}
+
+textarea:focus, input:focus{
+  outline: none;
 }
